# qa-auto-engineer-python-project-49

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  ruff.toml
brain_games/: brain_even_lib.py  constants.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
